# cmake-template

./: .appveyor.yml  .gitignore  .gitmodules  Build-Project.ps1  CMakeLists.txt  README.md  appveyor.yml
include/: header.hpp  lib.hpp
include/config/: config.hpp
include/cxxtimer/: cxxtimer.hpp
include/exception/: exception.hpp
lib/: CMakeLists.txt
lib/hello_lib/src/: lib.cpp
module/: GetVersionFromGitTag.cmake
report/: Pdf-Compile.ps1  Tectonic.toml
report/src/: _preamble.tex  index.tex
report/src/code/: _abspath.tex
report/src/code/cpp/: main.cpp
report/src/styles/: preamble.sty
report/src/titlepage/: title_economics.tex  title_new.tex  title_old.tex
src/: CMakeLists.txt  lib.cpp  main.cpp
src/cfg/: CMakeLists.txt  config.hpp.in
src/ctest/: CMakeLists.txt
src/doc/: CMakeLists.txt  Doxyfile.conf.in
src/gtest/: CMakeLists.txt
src/gtest/src/: testgtest_example.cc  testgtest_header.cc  testmain.cc
src/rep/: CMakeLists.txt  Tectonic.toml.in  _abspath.tex.in
src/test/: CMakeLists.txt
src/test/src/: main.cpp
